# src/controllers/commands.js
@@ -5,6 +5,11 @@ const { tradingViewMcpService } = require('../services/tradingview/TradingViewMc
 const signalOutcomeService = require('../services/storage/SignalOutcomeService');
 const sentryService = require('../services/monitoring/SentryService');
 const { getTelegramCommandMenu } = require('../lib/telegramCommandMenu');
+const {
+	isMaintenanceModeEnabled,
+	telegramMaintenanceMode,
+	TELEGRAM_MAINTENANCE_NOTICE,
+} = require('../lib/maintenanceMode');
 
 const READINESS_ERROR_LABELS = {
 	http_5xx: 'error HTTP 5xx del servidor TradingView',
@@ -132,6 +137,10 @@ async function telegramCommandRateLimiter(context, next) {
 
 telegramCommandRateLimiter.reset = () => telegramCommandRateLimitBuckets.clear();
 const getPrice = async (context) => {
+	if (isMaintenanceModeEnabled()) {
+		await context.reply(TELEGRAM_MAINTENANCE_NOTICE);
+		return;
+	}
 	const chatId = getChatId(context);
 	const text = (context.message && context.message.text) || '';
 	const messageSplited = text.trim().split(/\s+/);
@@ -206,6 +215,10 @@ function sendReadinessWarning(context, warningText, signal) {
 }
 
 const createTradingViewJobCommand = (type, command, buildPayload) => async (context) => {
+	if (isMaintenanceModeEnabled()) {
+		await context.reply(TELEGRAM_MAINTENANCE_NOTICE);
+		return;
+	}
 	const chatId = getChatId(context);
 	const args = parseCommandArgs(context);
 	const commandSpan = sentryService.startInactiveSpan({
@@ -314,6 +327,10 @@ function formatJobDetail(job) {
 }
 
 const jobsCommand = async (context) => {
+	if (isMaintenanceModeEnabled()) {
+		await context.reply(TELEGRAM_MAINTENANCE_NOTICE);
+		return;
+	}
 	const chatId = getChatId(context);
 	const args = parseCommandArgs(context);
 	const commandSpan = sentryService.startInactiveSpan({
@@ -398,6 +415,10 @@ const marketScannerCmd = createTradingViewJobCommand(
 );
 
 const newsMonitorCmd = async (context) => {
+	if (isMaintenanceModeEnabled()) {
+		await context.reply(TELEGRAM_MAINTENANCE_NOTICE);
+		return;
+	}
 	const chatId = getChatId(context);
 	const args = parseCommandArgs(context);
 	const commandSpan = sentryService.startInactiveSpan({
@@ -445,6 +466,10 @@ const newsMonitorCmd = async (context) => {
 };
 
 const cryptoBotCmd = async (context) => {
+	if (isMaintenanceModeEnabled()) {
+		await context.reply(TELEGRAM_MAINTENANCE_NOTICE);
+		return;
+	}
 	const chatId = getChatId(context);
 	const commandSpan = sentryService.startInactiveSpan({
 		name: 'telegram.command.cryptobot',
@@ -499,6 +524,10 @@ function escapeOutcomeText(value) {
 }
 
 const outcomesCommand = async (context) => {
+	if (isMaintenanceModeEnabled()) {
+		await context.reply(TELEGRAM_MAINTENANCE_NOTICE);
+		return;
+	}
 	const chatId = getChatId(context);
 	const args = parseCommandArgs(context);
 	const rawSymbol = (args.positionals[0] || '').trim();
@@ -677,6 +706,10 @@ function buildHelpMessage() {
 }
 
 const helpCmd = async (context) => {
+	if (isMaintenanceModeEnabled()) {
+		await context.reply(TELEGRAM_MAINTENANCE_NOTICE);
+		return;
+	}
 	const chatId = getChatId(context);
 	const commandSpan = sentryService.startInactiveSpan({
 		name: 'telegram.command.help',
@@ -804,5 +837,6 @@ module.exports = {
 	formatReadinessErrorLabel,
 	sendReadinessWarning,
 	telegramCommandRateLimiter,
+	telegramMaintenanceMode,
 	setWarningReplyTimeoutMsForTest,
 };
